@startuml

title __BUILDERS's Class Diagram__\n

  package  {
    package builders {
      abstract class AudioOutputBuilder {
          + getAudioOutput()
          {abstract} + createNewAudioOutputProduct()
          {abstract} + buildName()
          {abstract} + buildPrice()
          {abstract} + buildPower()
          {abstract} + buildWeight()
          {abstract} + buildInheritedFields()
      }
    }
  }
  

  package  {
    package builders {
      class FancyHeadphonesBuilder {
          + createNewAudioOutputProduct()
          + buildName()
          + buildPrice()
          + buildPower()
          + buildWeight()
          + buildInheritedFields()
      }
    }
  }
  

  package  {
    package builders {
      class FancyRadioBuilder {
          + createNewAudioOutputProduct()
          + buildName()
          + buildPrice()
          + buildPower()
          + buildWeight()
          + buildInheritedFields()
      }
    }
  }
  

  package  {
    package builders {
      class FancySpeakersBuilder {
          + createNewAudioOutputProduct()
          + buildName()
          + buildPrice()
          + buildPower()
          + buildWeight()
          + buildInheritedFields()
      }
    }
  }
  

  package  {
    package builders {
      class HiFiSystem {
          + constructedObjects : ArrayList<AudioOutput>
          - hifiThread : Thread
          - radioThread : Thread
          + setAudioOutputBuilder()
          + getAudioOutput()
          + constructAudioOutput()
          + HiFiSystem()
          + HiFiSystem()
          + getHifiThread()
          + getRadioThread()
          + setRadioThread()
          + run()
      }
    }
  }
  

  package  {
    package builders {
      class HiFiSystemTests {
          + getAudioOutput_NullBuilder_NullException()
          + constructAudioOutput_NullBuilder_NullException()
          + constructAudioOutput_NeverCalled_ZeroConstructedObjects()
          + constructAudioOutput_CalledSeveralTimes_CheckCountOfConstructedObjects()
      }
    }
  }
  

  package  {
    package builders {
      class SimpleHeadphonesBuilder {
          + createNewAudioOutputProduct()
          + buildName()
          + buildPrice()
          + buildPower()
          + buildWeight()
          + buildInheritedFields()
      }
    }
  }
  

  package  {
    package builders {
      class SimpleRadioBuilder {
          + createNewAudioOutputProduct()
          + buildName()
          + buildPrice()
          + buildPower()
          + buildWeight()
          + buildInheritedFields()
      }
    }
  }
  

  package  {
    package builders {
      class SimpleSpeakersBuilder {
          + createNewAudioOutputProduct()
          + buildName()
          + buildPrice()
          + buildPower()
          + buildWeight()
          + buildInheritedFields()
      }
    }
  }
  

  AudioOutputBuilder -up-|> Serializable
  AudioOutputBuilder o-- AudioOutput : audioOutput
  FancyHeadphonesBuilder -up-|> AudioOutputBuilder
  FancyRadioBuilder -up-|> AudioOutputBuilder
  FancySpeakersBuilder -up-|> AudioOutputBuilder
  HiFiSystem -up-|> Serializable
  HiFiSystem -up-|> Runnable
  HiFiSystem o-- AudioOutputBuilder : audioOutputBuilder
  HiFiSystem o-- RadioState : radioState
  SimpleHeadphonesBuilder -up-|> AudioOutputBuilder
  SimpleRadioBuilder -up-|> AudioOutputBuilder
  SimpleSpeakersBuilder -up-|> AudioOutputBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
